<resources>
    <string name="app_name">libros</string>
    <string name="txt_codigo">Código del libro</string>
    <string name="txt_descripcion">Descripción del libro</string>
    <string name="txt_precio">Precio del libro</string>
    <string name="btn_Registrar">Registrar libro</string>
    <string name="btn_Buscar">Buscar libro</string>
    <string name="btn_Eliminar">Eliminar libro</string>
    <string name="btn_Modificar">Modificar datos</string>
    <string name="btn_Limpiar">Limpiar datos</string>
</resources>